gibbon-compiler/examples/error/test06h_rec.gib
#lang gibbon

(data Nat [Zero] [Suc Nat])

(let ([x : Nat (case (Suc (Zero))
                 [(Zero)  (Zero)]
                 [(Suc _) (Zero)])])
  1000)
